--- a/QaLegend/test-output/old/QaLegend Suite/methods.html
+++ b/QaLegend/test-output/old/QaLegend Suite/methods.html
@@ -1,22 +1,82 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>QaLegend Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8885ab">  <td>24/06/19 00:01:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriyErrorMessageWithInvalidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">veriyErrorMessageWithInvalidMailId</td> 
-  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:00:41</td>   <td>-20912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:12</td>   <td>9813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="b7c064">  <td>24/06/19 00:00:49</td>   <td>-13210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserLoginDate()[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">verifyUserLoginDate</td> 
-  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:04</td>   <td>1816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:00:55</td>   <td>-6991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.HomePageTest@5af3afd9]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:12</td>   <td>9813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/06/19 00:01:04</td>   <td>1816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="8885ab">  <td>24/06/19 00:01:09</td>   <td>7657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriySuccessMessageWithValidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@36bc55de]">veriySuccessMessageWithValidMailId</td> 
-  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:24</td>   <td>-24312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>24/06/20 23:15:22</td>   <td>-25962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriyErrorMessageWithInvalidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">veriyErrorMessageWithInvalidMailId</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:36</td>   <td>-11899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:29</td>   <td>101262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ProductsPageTest@eadd4fb]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:59</td>   <td>11030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="8de6aa">  <td>24/06/20 23:17:22</td>   <td>94080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductsPageTest.VerifyProductsFilter()[pri:0, instance:com.qalegend.tests.ProductsPageTest@eadd4fb]">VerifyProductsFilter</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="f699d3">  <td>24/06/20 23:15:34</td>   <td>-13917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPasswordPageTest.veriySuccessMessageWithValidMailId()[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">veriySuccessMessageWithValidMailId</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:05</td>   <td>-42668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="aba8be">  <td>24/06/20 23:14:40</td>   <td>-67898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLogin()[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">verifyUserLogin</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:15</td>   <td>-33559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="a8adcf">  <td>24/06/20 23:16:21</td>   <td>32373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UsersPageTest.verifyAddUser()[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">verifyAddUser</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:16:32</td>   <td>43784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:15</td>   <td>-33559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:05</td>   <td>-42668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:00</td>   <td>72145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:15</td>   <td>-33559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="a68a88">  <td>24/06/20 23:17:08</td>   <td>80073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingsPageTest.verifyBookingListWithoutAnyBooking()[pri:0, instance:com.qalegend.tests.BookingsPageTest@4e5ed836]">verifyBookingListWithoutAnyBooking</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:16:32</td>   <td>43784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:05</td>   <td>-42668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:01</td>   <td>72408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.BookingsPageTest@4e5ed836]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:05</td>   <td>-42668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:00</td>   <td>72145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:15</td>   <td>86515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.BookingsPageTest@4e5ed836]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="859c86">  <td>24/06/20 23:15:56</td>   <td>8199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserLoginDate()[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">verifyUserLoginDate</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:36</td>   <td>-11899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:59</td>   <td>11261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.UserManagementPageTest@6cb107fd]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="859c86">  <td>24/06/20 23:15:44</td>   <td>-4277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.VerifyHomePageTitle()[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">VerifyHomePageTitle</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:17:15</td>   <td>86762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ProductsPageTest@eadd4fb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:15</td>   <td>-33559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:24</td>   <td>-24312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseFile.setup(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.ResetPasswordPageTest@4201c465]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="649a64">  <td>24/06/20 23:16:07</td>   <td>18469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementPageTest.verifyUserManagementUserOptions()[pri:0, instance:com.qalegend.tests.UserManagementPageTest@6cb107fd]">verifyUserManagementUserOptions</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="aba8be">  <td>24/06/20 23:15:13</td>   <td>-34684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">verifyUserLoginWithInvalidCredentials</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:16:10</td>   <td>22263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.UserManagementPageTest@6cb107fd]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="a8adcf">  <td>24/06/20 23:16:43</td>   <td>55142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UsersPageTest.veriyLoginWithNewlyAddedUser()[pri:0, instance:com.qalegend.tests.UsersPageTest@2ab4bc72]">veriyLoginWithNewlyAddedUser</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="aba8be">  <td>24/06/20 23:15:13</td>   <td>-34684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">verifyUserLoginWithInvalidCredentials</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="aba8be">  <td>24/06/20 23:15:13</td>   <td>-34684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyUserLoginWithInvalidCredentials(java.lang.String,java.lang.String)[pri:0, instance:com.qalegend.tests.LoginPageTest@4a003cbe]">verifyUserLoginWithInvalidCredentials</td> 
+  <td>main@1048098469</td>   <td></td> </tr>
+<tr bgcolor="86a0fa">  <td>24/06/20 23:15:59</td>   <td>11030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseFile.closeBrowser(org.testng.ITestResult)[pri:0, instance:com.qalegend.tests.HomePageTest@5b799640]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1048098469</td>   <td></td> </tr>
 </table>
